--- a/index.html
+++ b/index.html
@@ -12,11 +12,20 @@
     mollitia blanditiis accusamus tenetur aut culpa qui quos. <br>Ab quasi laboriosam, aut quis id cupiditate consequuntur?<br><br>
 
     <!-- A tag <p></p> separa textos em blocos de parágrafos -->
-    <p>Why do we use it?
+    <p><h1>Why do we use it?</h1>
     Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. <br> has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. <br>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-    
-    <p>is Lorem Ipsum?
+    <!-- A tag <hr> cria uma linha horizontal que também separa textos -->
+    <hr>
+    <p><h2>is Lorem Ipsum?</h2>
     It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. <br>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. <br> desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.<br> Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+
+    <!-- A tag <h$> é utilizada para criação de títulos, contém 6 níveis sendo o 1  maior e o 6 menor -->
+    <h1>Título Nível 1</h1>
+    <h2>Título Nível 2</h2>
+    <h3>Título Nível 3</h3>
+    <h4>Título Nível 4</h4>
+    <h5>Título Nível 5</h5>
+    <h6>Título Nível 6</h6>
 
 
 </body>
