--- a/rs_flex_basis.html
+++ b/rs_flex_basis.html
@@ -14,11 +14,11 @@
 
         .box div {
             border: 1px solid;
-            flex-basis: 50px;
+            flex-basis: 15%;
         }
 
         .box div:nth-child(1){
-            width: 200px;                        
+            width: 300px;                        
         }
 
     </style>
